# decoder-preserving-sae

./: .gitignore  README.md  REPRODUCIBILITY.md  pyproject.toml
configs/: arxiv_release_closure.json  exp01_isotropic_spectral.json  exp02_structured_prior.json  exp03_estimator_scaling.json  exp04_ioi_mechanism.json  exp04b_confirmatory.json  exp07_task_fidelity.json  exp08_task_spectrum.json  exp09_frozen_network.json  exp10_concept_discovery.json  exp11_static_matched_nmse.json  exp12_pythia_fresh_confirmation.json  exp13_concept_confirmation.json  paper_closure.json  smoke.yaml
docs/: exp13_concept_confirmation.md  experiment_plan.md  plotting_style.md  project_brief.md
experiments/: README.md  exp01_isotropic_spectral.py  exp02_prior_weight_sweep.py  exp02_structured_prior.py  exp03_estimator_scaling.py  exp04_ioi_mechanism.py  exp04b_confirmatory.py  exp04b_ioi_confirmatory.py  exp04b_mechanism_attribution.py  exp05_decoder_advantage_discovery.py  exp05_finalize_semantic_review.py  exp05_semantic_recurrence.py  exp06_generality.py  exp07_advantage_spectrum.py  exp07_gradient_fidelity.py  exp07_jumprelu_calibration.py  exp08_language_evidence.py  exp09_frozen_network.py  exp10_concept_discovery.py  exp10_context_mining.py  exp11_static_matched_nmse.py  exp12_pythia_fresh_confirmation.py  exp13_concept_confirmation.py  paper_closure.py  plot_exp04b.py
scripts/: audit_exp04_results.py  audit_exp10_artifacts.py  audit_exp13_concept_confirmation.py  backup_exp04_hf.sh  backup_exp04b_hf.sh  build_arxiv_closure_payload.py  check.sh  check_exp04_gpu_memory.py  (+46 more)
(+98 files in other folders)
