[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpsae"
version = "0.1.0"
description = "Decoder-preserving objectives for sparse autoencoders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dpsae"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

